adding call-to-action jumbotron
Signed-off-by: Nathanial L. McConnell <FluxAugur@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://disciplesofcode.com
 title: Disciples of Code
-subtitle: A site dedicated to those who desire to learn the ways of code.
+subtitle: Dedicated to those who desire to learn the ways of code.
 author: Nathanial L. McConnell
 simple_search: http://google.com/search
 description: An instructional blog devoted to teaching the ways of code through a collaborative online process.
