setting up GitHub deployment

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://disciplesofcode.com
+url: http://FluxAugur.github.io/disciplesofcode
 title: Disciples of Code
 subtitle: Dedicated to those who desire to learn the ways of code.
 author: Nathanial L. McConnell
