--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://FluxAugur.github.io
+url: http://disciplesofcode.com
 title: Disciples of Code
 subtitle: Dedicated to those who desire to learn the ways of code.
 author: Nathanial L. McConnell
@@ -63,9 +63,9 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: # FluxAugur
 github_repo_count: 0
-github_show_profile_link: true
+github_show_profile_link: false
 github_skip_forks: true
 
 # Twitter
@@ -73,12 +73,12 @@ twitter_user: fluxaugur
 twitter_tweet_button: true
 
 # Google +1
-google_plus_one: true
+google_plus_one: false
 google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user: 
+googleplus_user: # +NathanialMcConnell
 googleplus_hidden: true
 
 # Pinboard
@@ -97,4 +97,4 @@ disqus_show_comment_count: true
 google_analytics_tracking_id: UA-48088162-1
 
 # Facebook Like
-facebook_like: true
+facebook_like: false
