--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, custom/asides/tag_cloud.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [asides/recent_posts.html, custom/asides/tag_cloud.html, custom/asides/facebook_like.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -98,3 +98,28 @@ google_analytics_tracking_id: UA-48088162-1
 
 # Facebook Like
 facebook_like: false
+
+# Custom settings for https://developers.facebook.com/docs/reference/plugins/like-box/
+# the URL of the Facebook Page for this Like Box. Note: After July 2013 migration, href should be
+# an absolute URL.
+facebook_like_box_href: https://www.facebook.com/pages/Disciples-of-Code/583602605048299
+# the width of the plugin in pixels. Default width: 300px.
+facebook_like_box_width: 260
+# the height of the plugin in pixels. The default height varies based on number of faces to display,
+# and whether the stream is displayed. With the stream displayed, and 10 faces the default height is
+# 556px. With no faces, and no stream the default height is 63px.
+facebook_like_box_height:
+# the color scheme for the plugin. Options: 'light', 'dark'
+facebook_like_box_colorschema: dark
+# specifies whether or not to display profile photos in the plugin. Default value: true.
+facebook_like_box_show_faces: true
+# specifies whether to display a stream of the latest posts from the Page's wall.
+facebok_like_box_stream: true
+# specifies whether to display the Facebook header at the top of the plugin.
+facebook_like_box_header: false
+# specifies whether or not to show a border around the plugin, default true.
+# Set to false to style the iframe with your custom CSS.
+facebook_like_box_show_border: false
+# for Places, specifies whether the stream contains posts from the Place's wall or just checkins
+# from friends. Default value: false.
+facebook_like_box_force_wall: false
