--- a/author.yml
+++ b/author.yml
@@ -1,6 +1,6 @@
-deduce:
+FluxAugur:
     name: Nathanial L. McConnell
     twitter: fluxaugur
     email: fluxaugur@gmail.com
-    blog: http://disciplesofcode.com
+    blog: disciplesofcode.com
     description: "Founder of DisciplesOfCode.com"
