adding author cards

--- a/author.yml
+++ b/author.yml
@@ -3,4 +3,4 @@ FluxAugur:
     twitter: fluxaugur
     email: fluxaugur@gmail.com
     blog: disciplesofcode.com
-    description: "Founder of DisciplesOfCode.com"
+    description: "Founder of disciplesofcode.com"
