--- a/_config.yml
+++ b/_config.yml
@@ -52,12 +52,12 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/recent_posts.html, custom/asides/popular_posts.html, custom/asides/category_cloud.html, custom/asides/facebook_like.html, asides/calendar.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [asides/recent_posts.html, custom/asides/popular_posts.html, custom/asides/category_cloud.html, custom/asides/facebook_like.html, custom/asides/twitter_timeline.html, asides/calendar.html, asides/github.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
 # blog_index_asides:
-post_asides: [custom/asides/related_posts.html, custom/asides/popular_posts.html, asides/recent_posts.html, custom/asides/category_cloud.html, custom/asides/facebook_like.html]
+post_asides: [custom/asides/related_posts.html, custom/asides/popular_posts.html, asides/recent_posts.html, custom/asides/category_cloud.html, custom/asides/facebook_like.html, custom/asides/twitter_timeline.html]
 # page_asides:
 
 # Statistical analysis for searching and related posts.
