--- a/_config.yml
+++ b/_config.yml
@@ -128,3 +128,6 @@ facebook_like_box_force_wall: false
 # Facebook Insights / Open Graph
 facebook_app_id: 731859596826236
 facebook_page: https://www.facebook.com/disciplesofcode/posts/584189224989637
+
+# Flattr
+flattr_user: FluxAugur
