finishing part 9; updating styles

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://disciplesofcode.com
 title: Disciples of Code
-subtitle: Dedicated to those who desire to learn the ways of code.
+subtitle: For a more code-capable world
 author: Nathanial L. McConnell
 lunr_search: true
 simple_search: # http://google.com/search
