--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,8 @@ source: source
 destination: public
 plugins: plugins
 code_dir: downloads/code
-category_dir: blog/categories
+category_dir: categories
+author_dir: authors
 markdown: kramdown
 rdiscount:
   extensions:
